[package]
name = "serializable-tlsf"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
positioned-io = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
